--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <img src="assets/img/logo.png">
     <nav>
-        <a href="#">About Me</a>
+        <a href="#">About me</a>
         <a href="#">Skills</a>
         <a href="#">Portfolio</a>
     </nav>
