finished first section of about me

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -5,12 +5,15 @@
         <img src="assets/img/placeholer-person.png">
     </div>
 
-    <div class="info-profile">
-        <div class="pretext-info-profile">I am</div>
-        <div class="subinfo-profile">
-            <div>Denise Siegl</div>
-            <div>FRONTEND DEVELOPER</div>
+    <div class="profile-content-right">
+        <div class="info-profile">
+            <div class="pretext-info-profile">I am</div>
+            <div class="subinfo-profile">
+                <div>Denise Siegl</div>
+                <div>FRONTEND DEVELOPER</div>
+            </div>
         </div>
+        <button>Let's talk!</button>
     </div>
 
     <div class="banner">
