--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,7 +1,8 @@
 .about-me-section { 
     margin-top: 114px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .profile {
@@ -25,48 +26,81 @@
     }
     img:nth-child(3) {
         width: 400px;
-        margin-left: 88px;
+        margin-left: 110px;
         z-index: 1;
         position: absolute;
     }
 }
 
-.info-profile {
-    cursor: default;
-    display: flex;
-    margin-top: 40px;
-}
-
-.pretext-info-profile {
-    color: #FFFFFF;
-    font-size: 64px;
-    writing-mode: vertical-rl;
-    transform:rotate(180deg); 
-    margin-right: 8px;
-    line-height: 77px;
-    letter-spacing: 6px;
-}
-
-.subinfo-profile {
+.profile-content-right {
     display: flex;
     flex-direction: column;
-    div:nth-child(1) {
-        color: #FFFFFF;
-        font-size: 88px;
-        font-weight: bold;
-        line-height: 108px;
+    align-items: center;
+    margin-right: 57px;
+    width: 718px;
+
+    .info-profile {
+        cursor: default;
+        display: flex;
     }
-    div:nth-child(2) {
-        color: #9747FF;
-        font-size: 57px;
-        line-height: 46px;
-        padding-top: 8px;
+
+    .pretext-info-profile {
+        color: #FFFFFF;
+        font-size: 64px;
+        writing-mode: vertical-rl;
+        transform:rotate(180deg); 
+        margin-right: 8px;
+        line-height: 77px;
+        letter-spacing: 5px;
+    }
+
+    .subinfo-profile {
+        display: flex;
+        flex-direction: column;
+        div:nth-child(1) {
+            color: #FFFFFF;
+            font-size: 73px;
+            font-weight: bold;
+            line-height: 108px;
+            letter-spacing: 11.8px;
+        }
+        div:nth-child(2) {
+            color: #9747FF;
+            font-size: 47px;
+            line-height: 46px;
+            padding-top: 8px;
+        }
+    }
+
+    button {
+        width: 165px;
+        height: 58px;
+        border-radius: 10px;
+        margin-top: 50px;
+        font-size: 23px;
+        padding: 15px 30px;
+        gap: 10px;
+        background-color: #00BEE8;
+        color: #FFFFFF;  
+        z-index: 1;
+        cursor: pointer;
+        transition: 0.2s ease-in;
+        &:hover {
+            background-color: #9747FF;
+            width: 185px;
+            height: 68px;
+            transition: 0.2s ease-in;
+        }
     }
 }
 
 .banner {
     position: absolute;
-    top: 241px;
+    top: 320px;
     left: 0;
     right: 0;
+    img {
+        max-width: 100%;
+        width: 100%;
+    }
 }
