second section about me

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -18,6 +18,20 @@
 
     <div class="banner">
         <img src="assets/img/banner-separator.png">
+        <div class="line">
+            <img src="assets/img/line-info-profile.png">
+        </div>
+        <div class="info-icons">
+            <img src="assets/img/github.icon.png">
+            <img src="assets/img/mail-icon.png">
+            <img src="assets/img/linkedin-icon.png">
+            <p>denisabel78@hotmail.de</p>
+        </div>
+        <div class="scroll">
+            <p class="scroll-info">Scroll down</p>
+            <img src="assets/img/arrow-down.png">
+        </div>
+        <img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
     </div>
-    
+   
 </div>
