--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -11,10 +11,10 @@
     position: relative;
 
     img:nth-child(1) {
-        width: 424px;
+        width: 624px;
         position: absolute;
-        left: 0;
-        top: 95px;
+        left: -40px;
+        top: 0px;
         z-index: -1;
     }
     img:nth-child(2) {
@@ -36,8 +36,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 57px;
-    width: 718px;
+    margin-right: 87px;
+    width: 725px;
+    justify-content: space-between;
 
     .info-profile {
         cursor: default;
@@ -49,7 +50,7 @@
         font-size: 64px;
         writing-mode: vertical-rl;
         transform:rotate(180deg); 
-        margin-right: 8px;
+        margin-right: 20px;
         line-height: 77px;
         letter-spacing: 5px;
     }
@@ -59,14 +60,13 @@
         flex-direction: column;
         div:nth-child(1) {
             color: #FFFFFF;
-            font-size: 73px;
-            font-weight: bold;
-            line-height: 108px;
-            letter-spacing: 11.8px;
+            font-size: 89px;
+            font-family: 'Poppins bold';
+            letter-spacing: 6.2px;
         }
         div:nth-child(2) {
             color: #9747FF;
-            font-size: 47px;
+            font-size: 58px;
             line-height: 46px;
             padding-top: 8px;
         }
@@ -90,17 +90,82 @@
             width: 185px;
             height: 68px;
             transition: 0.2s ease-in;
+            margin-top: 40px;
         }
     }
 }
 
 .banner {
     position: absolute;
-    top: 320px;
+    top: 335px;
     left: 0;
     right: 0;
+    z-index: -1;
+    max-width: 100%;
+    width: 100%;
+    display: flex;
     img {
         max-width: 100%;
         width: 100%;
     }
+    .scroll {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        top: 371px;
+        right: 70px;
+        writing-mode: vertical-rl;
+        .scroll-info {
+            color: #FFFFFF;
+            font-size: 23px;
+        }
+        img {
+            width: 16px;
+            margin-top: 10px;
+        }
+    }
+   
+    .info-icons {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 500px;
+        height: 40px;
+        position: absolute;
+        top: 500px;
+        left: 110px;
+        img {
+            width: 30px;
+            cursor: pointer;
+            transition: 0.2s ease-in;
+            &:hover {
+                transform: scale(1.5);
+                transition: 0.2s ease-in;
+            }
+        }
+        p {
+            color: #FFFFFF;
+            font-size: 23px;
+            cursor: pointer;
+        }
+    }
+    .scroll-down-shadow {
+        width: 296px;
+        position: absolute;
+        top: 380px;
+        right: 0;
+        filter: blur(30px)
+    }
 }
+
+.line {
+    display: flex;
+    position: absolute;
+    top: 518px;
+    left: 0;
+    img {
+        width: 100px;
+    }
+}
+
+
