--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,13 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #141D2F;
 }
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('assets/fonts/Poppins/Poppins-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins bold';
+    src: url('assets/fonts/Poppins/Poppins-Bold.ttf');
+}
