about-me-section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,7 +2,7 @@
     <div class="profile">
         <img src="assets/img/profile-shadow-left.png">
         <img src="assets/img/profile-shadow-right.png">
-        <img src="assets/img/placeholer-person.png">
+        <img src="assets/img/character.png">
     </div>
 
     <div class="profile-content-right">
@@ -15,13 +15,12 @@
         </div>
         <button>Let's talk!</button>
     </div>
+</div>
 
-    <div class="banner">
-        <img src="assets/img/banner-separator.png">
-        <div class="line">
-            <img src="assets/img/line-info-profile.png">
-        </div>
+<div class="banner">
+    <div class="banner-content-up">
         <div class="info-icons">
+            <img src="assets/img/line-info-profile.png">
             <img src="assets/img/github.icon.png">
             <img src="assets/img/mail-icon.png">
             <img src="assets/img/linkedin-icon.png">
@@ -31,7 +30,26 @@
             <p class="scroll-info">Scroll down</p>
             <img src="assets/img/arrow-down.png">
         </div>
-        <img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
+    </div>
+        
+    <div class="about-me-content">
+        <div class="content-left">
+            <div class="header-about-me-content">About Me</div>
+            <div class="present-text">Hi, I am Denise. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores, dolores ea commodi voluptatem, temporibus dolore expedita, perspiciatis voluptas minus possimus dignissimos</div>
+            <div class="subinfo-first">
+                <img src="assets/img/idea.png">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis</div>
+            </div>
+            <div class="subinfo-second">
+                <img src="assets/img/puzzle.png">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis. g elit. Nostrum eum repudiandae quis</div>
+            </div>
+        </div>
+        <img class="profile-round" src="assets/img/charater2.png">
+        <img class="line-profile-round" src="assets/img/line-about-me.png">
     </div>
    
 </div>
+
+<img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
+
