--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -11,7 +11,7 @@
     position: relative;
 
     img:nth-child(1) {
-        width: 624px;
+        width: 646px;
         position: absolute;
         left: -40px;
         top: 0px;
@@ -25,8 +25,9 @@
         z-index: -1;
     }
     img:nth-child(3) {
-        width: 400px;
-        margin-left: 110px;
+        width: 610px;
+        height: 660px;
+        margin-left: 60px;
         z-index: 1;
         position: absolute;
     }
@@ -96,75 +97,117 @@
 }
 
 .banner {
-    position: absolute;
-    top: 335px;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    max-width: 100%;
-    width: 100%;
-    display: flex;
-    img {
-        max-width: 100%;
-        width: 100%;
-    }
-    .scroll {
+    background-image: url(../../assets/img/banner-separator.png);
+    padding-right: 69px;
+    margin-top: -280px;
+    padding-top: 500px;
+    .banner-content-up {
         display: flex;
-        align-items: center;
-        position: absolute;
-        top: 371px;
-        right: 70px;
-        writing-mode: vertical-rl;
-        .scroll-info {
-            color: #FFFFFF;
-            font-size: 23px;
-        }
-        img {
-            width: 16px;
-            margin-top: 10px;
-        }
-    }
-   
-    .info-icons {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        width: 500px;
-        height: 40px;
-        position: absolute;
-        top: 500px;
-        left: 110px;
-        img {
-            width: 30px;
-            cursor: pointer;
-            transition: 0.2s ease-in;
-            &:hover {
-                transform: scale(1.5);
-                transition: 0.2s ease-in;
+        justify-content: space-between;
+        .scroll {
+            display: flex;
+            align-items: center;
+            margin-top: -130px;
+            writing-mode: vertical-rl;
+            .scroll-info {
+                color: #FFFFFF;
+                font-size: 23px;
+            }
+            img {
+                width: 16px;
+                margin-top: 10px;
             }
         }
-        p {
-            color: #FFFFFF;
-            font-size: 23px;
-            cursor: pointer;
+       
+        .info-icons {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 560px;
+            height: 40px;
+            img:nth-child(1) {
+                width: 100px;
+                margin-left: -12px;
+            }
+            img {
+                width: 30px;
+                cursor: pointer;
+                transition: 0.2s ease-in;
+                &:hover {
+                    transform: scale(1.5);
+                    transition: 0.2s ease-in;
+                }
+            }
+            p {
+                color: #FFFFFF;
+                font-size: 23px;
+                cursor: pointer;
+            }
         }
-    }
-    .scroll-down-shadow {
-        width: 296px;
-        position: absolute;
-        top: 380px;
-        right: 0;
-        filter: blur(30px)
     }
 }
 
-.line {
-    display: flex;
+.scroll-down-shadow {
+    width: 296px;
     position: absolute;
-    top: 518px;
-    left: 0;
-    img {
-        width: 100px;
+    top: 700px;
+    right: 0;
+}
+
+.about-me-content {
+    color: #FFFFFF;
+    padding-left: 115px;
+    padding-top: 50px;
+    margin-right: -68px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* #141D2F; */
+    z-index: 1;
+    .profile-round {
+        width: 409px;
+        height: 409px;
+        border: 4px solid #00BEE8;
+        border-radius: 100%;
+        margin-right: -190px;
+    }
+    .line-profile-round {
+        width: 267px;
+        height: 4px;
+    }
+    .content-left {
+        width: 452px;
+    }
+    .header-about-me-content {
+        font-size: 90px;
+        font-family: 'Poppins bold';
+    }
+    .present-text {
+        font-size: 16px;
+        margin-bottom: 20px;
+    }
+    .subinfo-first, .subinfo-second {
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        padding-left: 20px;
+        margin-bottom: 20px;
+        img {
+            width: 34.47px;
+            height: 50px;
+            object-fit: contain;
+            margin-right: 20px;
+            transition: 0.2s ease-in;
+            &:hover {
+                transform: scale(1.3);
+                transition: 0.2s ease-in;
+            }
+        }
+    }
+    .subinfo-second {
+        img {
+            width: 42px;
+            margin-right: 14px;
+        }
     }
 }
 
