--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -10,7 +10,7 @@
     <img src="assets/img/join-photo.png">
     <div class="content-right">
         <div>Join</div>
-        <div>Angular | TypeScript | HTML | CSS | Firebase</div>
+        <div>JavaScript | HTML | CSS | GIT</div>
         <div>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</div>
     </div>
 </div>
