--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -34,7 +34,7 @@
         
     <div class="about-me-content">
         <div class="content-left">
-            <div class="header-about-me-content">About Me</div>
+            <div id="aboutMe" class="header-about-me-content">About Me</div>
             <div class="present-text">Hi, I am Denise. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores, dolores ea commodi voluptatem, temporibus dolore expedita, perspiciatis voluptas minus possimus dignissimos</div>
             <div class="subinfo-first">
                 <img src="assets/img/idea.png">
