--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,24 @@
-<p>contact works!</p>
+<div class="contact">
+    <img src="assets/img/line-contact.png">
+    <div>Contact</div>
+</div>
+
+<div class="contact-content">
+    <div class="content-left">
+        <div>Got a problem to solve?</div>
+        <div>Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to your projects with my work.</div>
+        <div>Need a Frontend developer? <span>Contact me!</span></div>
+    </div>
+    <div class="content-right">
+        <form>
+            <input type="text" placeholder="Your name">
+            <input type="email" placeholder="Your email">
+            <textarea placeholder="Your message"></textarea>
+        </form>
+        <div class="button">
+            <button>Send message :)</button>
+        </div>
+    </div>
+</div>
+
+<div class="arrow-up"></div>
