--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="my-skills">
-        <div>My skills</div>
+        <div id="skills">My skills</div>
         <div>I have gained experience in building projects with various front end technologies and concepts.</div>
         <button>Get in touch</button>
     </div>
