--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -56,6 +56,7 @@
             z-index: 1;
             cursor: pointer;
             transition: 0.2s ease-in;
+            border: none;
             &:hover {
                 background-color: #9747FF;
                 width: 220px;
