--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,16 +1,72 @@
 <div class="headline-portfolio">
     <img src="assets/img/line-left-portfolio.png">
-    <div>Portfolio</div>
+    <div id="portfolio">Portfolio</div>
     <img src="assets/img/line-right-portfolio.png">
 </div>
 
 <div class="subtext-portfolio">This page is a sample of my work - please feel free to try them out.</div>
 
-<div class="first-project">
+<div class="project">
     <img src="assets/img/join-photo.png">
     <div class="content-right">
         <div>Join</div>
         <div>JavaScript | HTML | CSS | GIT</div>
         <div>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</div>
+        <div class="buttons">
+            <button>Live test</button>
+            <button class="github-btn">Github</button>
+        </div>
+    </div>
+</div>
+
+<div class="project">
+    <div class="content-left">
+        <div>Join</div>
+        <div>JavaScript | HTML | CSS | GIT</div>
+        <div>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</div>
+        <div class="buttons-second">
+            <button>Live test</button>
+            <button class="github-btn">Github</button>
+        </div>
+    </div>
+    <img src="assets/img/join-photo.png">
+</div>
+
+<div class="project">
+    <img src="assets/img/join-photo.png">
+    <div class="content-right">
+        <div>Join</div>
+        <div>JavaScript | HTML | CSS | GIT</div>
+        <div>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</div>
+        <div class="buttons">
+            <button>Live test</button>
+            <button class="github-btn">Github</button>
+        </div>
+    </div>
+</div>
+
+<div class="project">
+    <div class="content-left">
+        <div>Join</div>
+        <div>JavaScript | HTML | CSS | GIT</div>
+        <div>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</div>
+        <div class="buttons-second">
+            <button>Live test</button>
+            <button class="github-btn">Github</button>
+        </div>
+    </div>
+    <img src="assets/img/join-photo.png">
+</div>
+
+<div class="project">
+    <img src="assets/img/join-photo.png">
+    <div class="content-right">
+        <div>Join</div>
+        <div>JavaScript | HTML | CSS | GIT</div>
+        <div>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</div>
+        <div class="buttons">
+            <button>Live test</button>
+            <button class="github-btn">Github</button>
+        </div>
     </div>
 </div>
