--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,8 @@ body {
     font-family: 'Poppins bold';
     src: url('assets/fonts/Poppins/Poppins-Bold.ttf');
 }
+
+@font-face {
+    font-family: 'Poppins semibold';
+    src: url('assets/fonts/Poppins/Poppins-SemiBold.ttf');
+}
