--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="content-left">
+        <img src="assets/img/logo.png">
+        <div>Impressum</div>
+        <div>Datenschutz</div>
+    </div>
+    <div class="content-middle">
+        <div>&copy; Denise Siegl 2023</div>
+    </div>
+    <div class="icons">
+        <img src="assets/img/github.icon.png">
+        <img src="assets/img/mail-icon.png">
+        <img src="assets/img/linkedin-icon.png">
+    </div>
+</div>
