--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <img src="assets/img/logo.png">
     <nav>
-        <a href="#">About me</a>
-        <a href="#">Skills</a>
-        <a href="#">Portfolio</a>
+        <a (click)="scroll('aboutMe')">About me</a>
+        <a (click)="scroll('skills')">Skills</a>
+        <a (click)="scroll('portfolio')">Portfolio</a>
     </nav>
 </header>
