finished nav, highlights, scroll

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-section">
+<div class="about-me-section" id="header">
     <div class="profile">
         <img src="assets/img/profile-shadow-left.png">
         <img src="assets/img/profile-shadow-right.png">
