--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -18,3 +22,4 @@ body {
     font-family: 'Poppins semibold';
     src: url('assets/fonts/Poppins/Poppins-SemiBold.ttf');
 }
+
