--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact">
+<div class="contact" id="contact">
     <img src="assets/img/line-contact.png">
     <div>Contact</div>
 </div>
@@ -21,4 +21,4 @@
     </div>
 </div>
 
-<div class="arrow-up"></div>
+<div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
