--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -18,7 +18,7 @@
     <div class="my-skills">
         <div id="skills">My skills</div>
         <div>I have gained experience in building projects with various front end technologies and concepts.</div>
-        <button>Get in touch</button>
+        <button (click)="scroll('contact')" routerLink="/contact">Get in touch</button>
     </div>
     <img class="line-my-skills" src="assets/img/line-my-skills.png">
 </div>
