--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -101,6 +101,7 @@
     padding-right: 69px;
     margin-top: -280px;
     padding-top: 500px;
+    background-size: cover;
     .banner-content-up {
         display: flex;
         justify-content: space-between;
@@ -125,7 +126,7 @@
             display: flex;
             align-items: center;
             justify-content: space-around;
-            width: 560px;
+            width: 628px;
             height: 40px;
             img:nth-child(1) {
                 width: 100px;
@@ -141,9 +142,18 @@
                 }
             }
             p {
-                color: #FFFFFF;
-                font-size: 23px;
-                cursor: pointer;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    cursor: pointer;
+                    width: 250px;
+                    &:hover {
+                        transform: unset!important;
+                        transition: unset!important;
+                    }
+                }
+                
             }
         }
     }
@@ -160,21 +170,10 @@
     color: #FFFFFF;
     padding-left: 115px;
     padding-top: 50px;
-    margin-right: -68px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .profile-round {
-        width: 409px;
-        height: 409px;
-        border: 4px solid #00BEE8;
-        border-radius: 100%;
-        margin-right: -190px;
-    }
-    .line-profile-round {
-        width: 267px;
-        height: 4px;
-    }
+
     .content-left {
         width: 452px;
     }
@@ -208,6 +207,25 @@
         img {
             width: 42px;
             margin-right: 14px;
+        }
+    }
+    .profile-round-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 680px;
+        margin-right: -70px;
+        z-index: 1;
+        .profile-round {
+            width: 409px;
+            height: 409px;
+            border: 4px solid #00BEE8;
+            border-radius: 100%;
+            margin-right: -190px;
+        }
+        .line-profile-round {
+            width: 267px;
+            height: 4px;
         }
     }
 }
