--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="content-left">
-        <img src="assets/img/logo.png">
+        <img (click)="scroll('header')" routerLink="/" src="assets/img/logo.png">
         <div>Impressum</div>
         <div>Datenschutz</div>
     </div>
