--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@ body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     background-color: #141D2F;
+    cursor: default;
+    max-width: 100vw;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 @font-face {
