--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,4 +12,5 @@
         <img src="assets/img/mail-icon.png">
         <img src="assets/img/linkedin-icon.png">
     </div>
+    <img class="shadow"src="assets/img/shadow-contact.png">
 </div>
