--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,11 @@ body {
     src: url('assets/fonts/Poppins/Poppins-SemiBold.ttf');
 }
 
+:root {
+    --light-blue: #00BEE8;
+    --white: #FFFFFF;
+    --background: #141D2F;
+    --purple: #9747FF;
+}
+
+
