--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,8 +1,3 @@
-$light-blue: #1CDAE6;
-$white: #FFFFFF;
-$background: #141D2F;
-$purple: #9747FF;
-
 header {
     position: fixed;
     top: 0;
@@ -13,7 +8,7 @@ header {
     align-items: center;
     padding: 20px 100px;
     z-index: 999;
-    background-color: $background;
+    background-color: var(--background);
     img {
         width: 100px;
         height: 100px;
@@ -23,13 +18,13 @@ header {
     nav {
         display: flex;
         a {
-            color: $white;
+            color: var(--white);
             text-decoration: none;
             font-size: 23px;
             margin-left: 50px;
             cursor: pointer;
             &:hover {
-                color: $light-blue;
+                color: var(--light-blue);
                 transition: 0.5s;
             }
             &::after {
@@ -48,11 +43,11 @@ header {
     display: block;
     position: relative;
     width: 50px;
-    border-bottom: 4px solid $purple!important;
+    border-bottom: 4px solid var(--purple)!important;
 }
 
 .active {
-    color: $light-blue!important;
+    color: var(--light-blue)!important;
 }
 
 
